[package]
name = "nottify"
version = "0.1.0"
edition = "2021"


[dependencies]
notify-rust = "4"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
[dependencies.mqtt-async-client]
version = "0.3"
default-features = false
path = "../mqtt-async-client-rs"
